# adnus

./: CITATION.cff  CONTRIBUTING.md  README.md  meta.yaml  package.json  pixi.toml  pyproject.toml  recipe.yaml  setup.py  tox.ini
.github/workflows/: conda-publish.yml  lint.yml  python-package.yml  python-publish.yml  python_ci.yml  static.yml  workflow.yml  zenodo.yml
docs/: conf.py
recipe/: meta.yaml
src/adnus/: __init__.py  _version.py  main.py
tests/: test_adnus.py
